tests/snapshots/config_fixtures__unknown_provider.snap
---
source: tests/config_fixtures.rs
expression: err.to_string()
---
TOML parse error at line 7, column 12
  |
7 | provider = "azure"
  |            ^^^^^^^
unknown variant `azure`, expected `openai` or `anthropic`
